--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.2;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -19,6 +19,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  font-size: 1rem;
 }
 a:hover {
   color: #535bf2;
@@ -35,8 +36,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -47,18 +46,18 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 5px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #646cff;
   cursor: pointer;
   transition: border-color 0.25s;
+  padding: 0 2rem;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #787fff;
 }
 button:focus,
 button:focus-visible {
