--- a/src/style.css
+++ b/src/style.css
@@ -69,8 +69,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
+.flex-wrapper {
+  display: flex;
+}
+.flex {
+  flex: 1;
 }
 
 @media (prefers-color-scheme: light) {
