--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
 }
 
 #app {
-  padding-top: 10vh;
+  padding-top: 5vh;
 }
 
 a {
@@ -50,8 +50,11 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
+  text-align: center;
   line-height: 1.1;
+  margin-bottom: 3rem;
+  font-variation-settings: 'wght' 600;
 }
 
 button {
