--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 #app {
-  padding-top: 5vh;
+  padding: 5vh 20px;
 }
 
 a {
