--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,6 @@
   box-sizing: border-box;
 }
 
-#app {
-  padding: 5vh 20px;
-}
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -58,6 +54,7 @@ h1 {
   font-size: 2em;
   text-align: center;
   line-height: 1.1;
+  margin-top: 3rem;
   margin-bottom: 3rem;
   font-variation-settings: 'wght' 600;
 }
