--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: OpenSans;
-  src: url(/src/assets/fonts/OpenSans-VariableFont.woff2) format('woff2');
+  src: url(../assets/fonts/OpenSans-VariableFont.woff2) format('woff2');
 }
 
 :root {
