--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --border-radius: 0.5rem;
 }
 * {
   margin: 0;
@@ -25,20 +27,24 @@
   box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-  font-size: 1rem;
-}
-a:hover {
-  color: #535bf2;
+html {
+  background: #0f1018;
 }
 
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+}
+
+a {
+  font-weight: 500;
+  color: #f71432;
+  text-decoration: inherit;
+  font-size: 1rem;
+}
+a:hover {
+  color: #f71432;
 }
 
 h1 {
@@ -49,19 +55,25 @@ h1 {
   font-variation-settings: 'wght' 600;
 }
 
+h2 {
+  font-size: 1.1rem;
+  margin-left: 1rem;
+  font-variation-settings: 'wght' 600;
+}
+
 button {
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   border: 1px solid transparent;
   font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
-  background-color: #646cff;
+  background-color: #f71432;
   cursor: pointer;
   transition: border-color 0.25s;
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 button:hover {
-  border-color: #787fff;
+  border-color: #f71432;
 }
 button:focus,
 button:focus-visible {
@@ -81,7 +93,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #f71432;
   }
   button {
     background-color: #f9f9f9;
